Bug: 46222 - Improve display of conversations Checkpoint. Initial work on shortcuts. Since the context for shortcuts is tied to the controller, we have to manage focus internally between the CLV and the conv view (CV2). A focused msg within CV2 will have a heavier border. It will be the recipient of msg shortcuts such as MR for Mark Read. Right/left arrow: move focus between CLV and CV2 Up/down arrow: move focus to next/previous msg Shift: toggle expansion of focused msg - fix double menu issue with zimlet objects - fix tag menu
http://bugzilla.zimbra.com/show_bug.cgi?id=46222

Copied from Perforce
 Change: 321480

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -643,6 +643,11 @@ INPUT[type="text"].search_input {
 
 .ZmMailMsgCapsuleView {
 	margin: 2px 5px;
+	border: 1px black solid;
+}
+
+.ZmMailMsgCapsuleView.focused {
+	margin: 0 4px;
 	border: 2px black solid;
 }
 
@@ -656,7 +661,7 @@ INPUT[type="text"].search_input {
 
 .ZmMailMsgCapsuleView .LabelColValue {
 	@MailMsgHeaderText@
-	white-space: normal;
+	white-space: nowrap;
 	vertical-align: top;
 	padding: 3px;
 }
